application/brennoflavio/blog/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: blog
  namespace: blog
  labels:
    app: blog
spec:
  replicas: 1
  selector:
    matchLabels:
      app: blog
  template:
    metadata:
      labels:
        app: blog
    spec:
      containers:
      - name: blog
        image: nginx:alpine
        ports:
        - containerPort: 80
        resources:
          limits:
            memory: 80Mi
          requests:
            cpu: 10m
            memory: 80Mi
        volumeMounts:
        - name: blog-storage
          mountPath: /usr/share/nginx/html
      volumes:
      - name: blog-storage
        persistentVolumeClaim:
          claimName: blog
