application/brennoflavio/blog/matrix-well-known-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: matrix-well-known
  namespace: blog
spec:
  replicas: 1
  selector:
    matchLabels:
      app: matrix-well-known
  template:
    metadata:
      labels:
        app: matrix-well-known
    spec:
      automountServiceAccountToken: false
      containers:
        - name: nginx
          image: nginx:alpine
          ports:
            - containerPort: 80
          resources:
            limits:
              memory: 32Mi
            requests:
              cpu: 10m
              memory: 32Mi
          volumeMounts:
            - name: config
              mountPath: /etc/nginx/conf.d/default.conf
              subPath: default.conf
              readOnly: true
      volumes:
        - name: config
          configMap:
            name: matrix-well-known
