application/brennoflavio/blog/matrix-well-known-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: matrix-well-known
  namespace: blog
spec:
  selector:
    app: matrix-well-known
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
