application/brennoflavio/blog/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: blog
  namespace: blog
  labels:
    app: blog
spec:
  selector:
    app: blog
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
  type: ClusterIP
