application/brennoflavio/blog/matrix-well-known-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: matrix-well-known
  namespace: blog
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  ingressClassName: external-nginx
  rules:
    - host: brennoflavio.com.br
      http:
        paths:
          - path: /\.well-known/matrix/server$
            pathType: ImplementationSpecific
            backend:
              service:
                name: matrix-well-known
                port:
                  number: 80
          - path: /\.well-known/matrix/client$
            pathType: ImplementationSpecific
            backend:
              service:
                name: matrix-well-known
                port:
                  number: 80
  tls:
    - hosts:
        - brennoflavio.com.br
      secretName: blog-tls
